--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/setup-node@v3.9.1
         with:
           node-version: '20.19.0'
+      - run: pwd
       - run: cd /lab01-TD/lab0507/
       - run: npm install
       - run: npm start
