--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: '20.19.0'
       - run: pwd
+      - run: ls
       - run: cd /lab01-TD/lab0507/
       - run: npm install
       - run: npm start
