--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: '20.19.0'
       - run: cd lab0705
+      - run: ls -al
       - run: npm start
       - name: deploy
         uses: peaceiris/actions-gh-pages@v3
